objects/Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Type</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Assignments (Assessment Type)</relationshipLabel>
        <relationshipName>AssignmentsTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Library__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Library</label>
        <referenceTo>Assignment_Lib__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>blue</fullName>
                </value>
                <value>
                    <fullName>brown</fullName>
                </value>
                <value>
                    <fullName>green</fullName>
                </value>
                <value>
                    <fullName>orange</fullName>
                </value>
                <value>
                    <fullName>pink</fullName>
                </value>
                <value>
                    <fullName>tan</fullName>
                </value>
                <value>
                    <fullName>white</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Curriculum__c</fullName>
        <label>Curriculum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Values Needed</fullName>
                </value>
                <value>
                    <fullName>Please Setup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Code__c</fullName>
        <description>This field is used to populate the Gradebook Assignment Name.</description>
        <formula>Assignment_Library__r.Picklist_Value__r.Display_Code__c</formula>
        <label>Display Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>When is Assignment due to be completed?</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_Gradebook__c</fullName>
        <description>This field is to display the Due Date correctly in the gradebook.</description>
        <formula>TEXT(Due_Date__c)</formula>
        <label>Due Date for Gradebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Final_Grade__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether or not a grade will be used in the calculation of a final grade or not</description>
        <label>Include in Final Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructional_Approach__c</fullName>
        <label>Instructional Approach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Values Needed</fullName>
                </value>
                <value>
                    <fullName>Please Setup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Assignment_Type__c</fullName>
        <label>Local Assignment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Name__c</fullName>
        <inlineHelpText>The Media Name will display in the Student/Parent Portal.  The name will appear under &quot;Now Playing&quot; in the Media Center, found in Current Assignments. The Media Name will also display on the Assignment page in SchoolForce.</inlineHelpText>
        <label>Media Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Source__c</fullName>
        <inlineHelpText>Please select a link to a video for the Media Source. This video will display, and play, in the Media Center in the Student/Parent Portal under Current Assignments. From YouTube, please select the embed link. For other videos, please select the URL.</inlineHelpText>
        <label>Media Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_in_Gradebook__c</fullName>
        <description>This field will be defaulted based on an assignment type  and date and will be used so that the gradebook has a uniform look and feel.</description>
        <label>Name in Gradebook</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_Skill__c</fullName>
        <label>Objective/Skill</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grading Scale</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected value must be a grade scale.</errorMessage>
            <filterItems>
                <field>Picklist_Value__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Grade Scale</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Possible_Points__c</fullName>
        <label>Possible Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Outside_Source__c</fullName>
        <label>Related Outside Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Show_in_portal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the assignment record in the Portal</description>
        <label>Show in portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Scale</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Assignments (Standard Scale)</relationshipLabel>
        <relationshipName>AssignmentStandardScale</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Assignment__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighting_Value__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Weighting to be applied for this assignment (default to be set by the Assignment Weighting defaults for this course</inlineHelpText>
        <label>Weighting Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name_in_Gradebook__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Weighting_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Assignment_Library__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assignment_Name_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Name),
NOT($Profile.Id = &quot;00e1a000000otaR&quot;)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Assignment Name cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>