objects/Assignment__c/fields/X18_digit_Assignment_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_digit_Assignment_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 digit Assignment ID</label>
    <type>Text</type>
</CustomField>