objects/Assignment__c/validationRules/Assignment_Name_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Name_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Name),
NOT($Profile.Id = &quot;00e1a000000otaR&quot;)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Assignment Name cannot be changed.</errorMessage>
</ValidationRule>