objects/Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name_in_Gradebook__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Weighting_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Assignment_Library__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>